# odp

./: .gitignore  .gitmodules  LICENSE.FSL  Makefile.am  bootstrap  configure.ac
doc/: doxygen.cfg  odp_dox.h  (+2 more)
platform/linux-dpaa1/: Makefile.am  linux.c  odp_buffer.c  odp_buffer_pool_bman.c  odp_classification.c  odp_cpumask.c  odp_cpumask_task.c  odp_crypto.c  odp_init.c  odp_packet.c  odp_packet_flags.c  odp_packet_io.c  odp_pool.c  odp_queue.c  odp_schedule.c  odp_shared_memory.c  odp_system_info.c  odp_time.c  odp_timer.c
platform/linux-dpaa1/arch/linux/: odp_cpu_cycles.c  odp_time_cycles.c
platform/linux-dpaa1/include/: odp_buffer_internal.h  odp_classification_internal.h  odp_crypto_internal.h  odp_internal.h  odp_packet_internal.h  odp_packet_io_internal.h  odp_packet_io_queue.h  odp_pool_internal.h  odp_queue_internal.h  odp_schedule_internal.h  odp_timer_internal.h
platform/linux-dpaa1/include/configs/: odp_config_platform.h
platform/linux-dpaa1/include/odp/: crypto.h
platform/linux-dpaa1/include/odp/plat/: crypto_types.h  event_types.h  pool_types.h  queue_types.h
platform/linux-dpaa1/pcd/: odp_ipsec_pcd.xml  odp_pktio_pcd.xml  odp_test_config_ls1043.xml
platform/linux-dpaa2/: Makefile.am  Makefile.inc  README  odp_buffer.c  odp_classification.c  odp_cpumask_task.c  odp_crypto.c  odp_event.c  odp_init.c  odp_packet.c  odp_packet_dpaa2.c  odp_packet_io.c  odp_packet_nadk.c  odp_pool.c  odp_queue.c  odp_schedule.c  odp_shared_memory.c  odp_system_info.c  odp_thread.c  odp_timer.c
platform/linux-dpaa2/cmdif/: odpfsl_cidev.c
platform/linux-dpaa2/flib/mc/: fsl_mc_cmd.h
platform/linux-dpaa2/include/: odp_align_internal.h  odp_buffer_internal.h  odp_classification_datamodel.h  odp_classification_internal.h  odp_crypto_internal.h  odp_debug_internal.h  odp_internal.h  odp_packet_dpaa2.h  odp_packet_internal.h  odp_packet_io_internal.h  odp_packet_io_queue.h  odp_packet_nadk.h  odp_pool_internal.h  odp_queue_internal.h  odp_schedule_internal.h
platform/linux-dpaa2/include/nadk/aiop/: nadk_aiop.h  nadk_aiop_priv.h
platform/linux-dpaa2/include/nadk/cmdif/: cmdif.h  fsl_cmdif_client.h  fsl_cmdif_flib_c.h  fsl_cmdif_flib_s.h  fsl_cmdif_server.h  fsl_shbp.h
platform/linux-dpaa2/include/nadk/common/: nadk_cfg.h  nadk_common.h  nadk_lock.h  nadk_queue.h
platform/linux-dpaa2/include/nadk/conc/: nadk_conc_priv.h
platform/linux-dpaa2/include/nadk/core/: eal_filesystem.h  eal_hugepages.h  eal_internal_cfg.h  nadk.h  nadk_dev.h  nadk_dev_intr_priv.h  nadk_dev_priv.h  nadk_hwq.h  nadk_hwq_priv.h  nadk_internal.h  nadk_io_portal_priv.h  nadk_vfio.h
platform/linux-dpaa2/include/nadk/eth/: nadk_eth_ldpaa_annot.h  nadk_eth_ldpaa_qbman.h  nadk_eth_priv.h  nadk_ethdev.h  nadk_ethdev_priv_ldpaa.h  nadk_ether.h  nadk_vq.h
platform/linux-dpaa2/include/nadk/notify/: nadk_dev_notif.h  nadk_dev_notif_priv.h
platform/linux-dpaa2/include/nadk/rts/: malloc_elem.h  malloc_heap.h  nadk_debug.h  nadk_hexdump.h  nadk_log.h  nadk_malloc.h  nadk_malloc_heap.h  nadk_mbuf.h  nadk_mbuf_priv.h  nadk_mbuf_priv_ldpaa.h  nadk_mbuf_support.h  nadk_memconfig.h  nadk_memcpy.h  nadk_memory.h  nadk_memzone.h  nadk_mpool.h  nadk_mpool_priv.h  nadk_random.h  nadk_string_fns.h  nadk_tailq.h  nadk_time.h  nadk_timer.h
platform/linux-dpaa2/include/nadk/sec/: nadk_sec_priv.h
platform/linux-dpaa2/include/odp/: align.h  atomic.h  buffer.h  byteorder.h  config.h  crypto.h  debug.h  init.h  packet.h  packet_flags.h  packet_io.h  shared_memory.h  std_types.h  time.h
platform/linux-dpaa2/include/sdk_priv/: dpaa2_conc_priv.h  dpaa2_dev_intr_priv.h  dpaa2_dev_notif_priv.h  dpaa2_eth_priv.h  dpaa2_io_portal_priv.h  dpaa2_mbuf_priv.h  dpaa2_mbuf_priv_ldpaa.h  dpaa2_mpool_priv.h  dpaa2_sec_priv.h
platform/linux-dpaa2/kni/: nadk_kni.c  nadk_kni.h  nadk_kni_common.h  nadk_kni_fifo.h  odpfsl_kni.c  odpfsl_kni.h  odpfsl_kni_api.c  odpfsl_kni_fifo.h
platform/linux-dpaa2/malloc/: odpfsl_data_malloc.c
platform/linux-dpaa2/nadk/libaiop/: nadk_aiop.c
platform/linux-dpaa2/nadk/libcmdif/: cmdif_client_gpp.c  cmdif_srv_flib.c  cmdif_srv_gpp.c
platform/linux-dpaa2/nadk/libconc/: nadk_conc_ldpaa.c
platform/linux-dpaa2/nadk/libcore/: eal_hugepage_info.c  nadk_core.c  nadk_dev.c  nadk_hwq.c  nadk_ldpaa.c  nadk_ldpaa_vfio.c
platform/linux-dpaa2/nadk/libeth/: nadk_eth_ldpaa.c  nadk_ethdev_ldpaa.c  nadk_ethdev_priv_ldpaa.c
platform/linux-dpaa2/nadk/libevent/: nadk_dev_intr_priv.c  nadk_dev_notif.c  nadk_dev_notif_priv.c
platform/linux-dpaa2/nadk/libio_portal/: nadk_io_portal.c
platform/linux-dpaa2/nadk/librts_common/: eal_common_hexdump.c  eal_common_log.c  eal_debug.c  eal_log.c
platform/linux-dpaa2/nadk/librts_malloc/: malloc_elem.c  malloc_heap.c  nadk_malloc.c
platform/linux-dpaa2/nadk/librts_mbuf/: nadk_mbuf.c  nadk_mbuf_ldpaa.c  nadk_mbuf_priv_ldpaa.c
platform/linux-dpaa2/nadk/librts_mem/: eal_common_memory.c  eal_common_memzone.c  eal_memory.c
platform/linux-dpaa2/nadk/librts_mpool/: nadk_mpool.c
platform/linux-dpaa2/nadk/librts_time/: nadk_time.c  nadk_timer.c
platform/linux-dpaa2/nadk/libsec/: nadk_sec_ldpaa.c
platform/linux-dpaa2/sdk/: dpaa2_conc_ldpaa.c  dpaa2_dev.c  dpaa2_eth_ldpaa.c  dpaa2_ethdev_ldpaa.c  dpaa2_hwq.c  dpaa2_io_portal.c  dpaa2_ldpaa.c  dpaa2_ldpaa_vfio.c  dpaa2_main.c  dpaa2_mbuf.c  dpaa2_mbuf_ldpaa.c  dpaa2_mbuf_priv_ldpaa.c  dpaa2_sec_ldpaa.c
platform/linux-dpaa2/sdk/libaiop/: dpaa2_aiop.c
platform/linux-dpaa2/sdk/libcmdif/: cmdif_client_gpp.c  cmdif_srv_gpp.c
platform/linux-dpaa2/sdk/librts/: dpaa2_malloc.c  dpaa2_mpool.c  dpaa2_time.c  dpaa2_timer.c  eal_common_log.c  eal_log.c  eal_memory.c  malloc_elem.c  malloc_heap.c
test/validation/: Makefile.am  Makefile.inc
test/validation/classification/: odp_classification_test_pmr.c  odp_classification_tests.c
test/validation/crypto/: crypto.c  odp_crypto_test_inp.c
test/validation/crypto_proto/: odp_proto_test_inp.c  pdcp_test_vector.h  proto.c  proto.h
test/validation/packet/: packet.c
test/validation/pktio/: pktio.c
test/validation/scheduler/: scheduler.c
test/validation/timer/: timer.c
(+111 files in other folders)
